# YatSenOS-V2-Targets

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  ysos.py
crates/app/.cargo/: config.toml
crates/app/brk/: Cargo.toml
crates/app/brk/src/: main.rs
crates/app/counter/: Cargo.toml
crates/app/dining/: Cargo.toml
crates/app/fact/: Cargo.toml
crates/app/fork/: Cargo.toml
crates/app/hello/: Cargo.toml
crates/app/mq/: Cargo.toml
crates/app/mutex/: Cargo.toml
crates/app/sh/: Cargo.toml
crates/app/sh/src/: main.rs  services.rs  utils.rs
crates/boot/: Cargo.toml
crates/boot/.cargo/: config.toml
crates/boot/src/: config.rs  fs.rs  lib.rs  main.rs
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/.cargo/: config.toml
crates/kernel/config/: boot.conf  x86_64-unknown-none.json
crates/kernel/src/: lib.rs  main.rs
crates/kernel/src/drivers/: cache.rs  filesystem.rs  input.rs  serial.rs  uart16550.rs
crates/kernel/src/drivers/ata/: bus.rs  consts.rs  mod.rs
crates/kernel/src/interrupt/: clock.rs  exception.rs  mod.rs  serial.rs
crates/kernel/src/interrupt/apic/: ioapic.rs  mod.rs  xapic.rs
crates/kernel/src/interrupt/syscall/: mod.rs  service.rs
crates/kernel/src/memory/: address.rs  frames.rs  gdt.rs  user.rs
crates/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs  sync.rs
crates/kernel/src/proc/vm/: heap.rs  mod.rs  stack.rs
crates/kernel/src/utils/: func.rs  logger.rs  macros.rs  mod.rs  regs.rs  resource.rs
crates/lib/: Cargo.toml
crates/lib/src/: io.rs  lib.rs  macros.rs  syscall.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/src/common/: cache.rs  device.rs  metadata.rs  mod.rs
crates/storage/src/fs/: mod.rs  random.rs
crates/storage/src/fs/fat16/: direntry.rs  file.rs  mod.rs
crates/storage/src/partition/mbr/: mod.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: lib.rs
pkg/app/brk/: Cargo.toml
pkg/app/brk/src/: main.rs
pkg/app/config/: x86_64-unknown-ysos.json
pkg/app/counter/: Cargo.toml
pkg/app/counter/src/: main.rs
pkg/app/dining/: Cargo.toml
pkg/app/dining/src/: main.rs
pkg/app/fact/: Cargo.toml
pkg/app/fork/: Cargo.toml
pkg/app/fork/src/: main.rs
pkg/app/hello/: Cargo.toml
pkg/app/hello/src/: main.rs
pkg/app/mq/: Cargo.toml
pkg/app/mq/src/: main.rs
pkg/app/mutex/: Cargo.toml
pkg/app/mutex/src/: main.rs
pkg/app/sh/: Cargo.toml
pkg/app/sh/src/: consts.rs  main.rs  services.rs
pkg/boot/: Cargo.toml
pkg/boot/.cargo/: config
pkg/boot/src/: config.rs  fs.rs  lib.rs  main.rs
pkg/elf/: Cargo.toml
pkg/elf/src/: lib.rs
pkg/fs/: Cargo.toml
pkg/fs/src/: lib.rs
pkg/fs/src/common/: block.rs  device.rs  error.rs  filesystem.rs  io.rs  macros.rs  metadata.rs  mod.rs  path.rs
pkg/fs/src/disk/mbr/: mod.rs  partition.rs
pkg/fs/src/fs/fat16/: bpb.rs  dir_entry.rs  file.rs  impls.rs  mod.rs
pkg/fs/src/impls/fat16/: dir_entry.rs  file.rs  impls.rs  mod.rs
pkg/fs/src/partition/mbr/: mod.rs  partition.rs
pkg/fs/src/structs/: block.rs
pkg/fs/tests/: bpb.rs  direntry.rs  partition.rs  random.rs
pkg/kernel/: Cargo.toml
pkg/kernel/config/: boot.conf
pkg/kernel/src/: lib.rs  main.rs
pkg/kernel/src/drivers/: ata.rs  cache.rs  filesystem.rs  input.rs  mod.rs  serial.rs  uart16550.rs
pkg/kernel/src/drivers/ata/: bus.rs  mod.rs
pkg/kernel/src/interrupt/: clock.rs  exception.rs  handlers.rs  mod.rs  serial.rs
pkg/kernel/src/interrupt/apic/: ioapic.rs  mod.rs  xapic.rs
pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
pkg/kernel/src/memory/: address.rs  allocator.rs  frames.rs  gdt.rs  mod.rs  user.rs
pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  process.rs  processor.rs  sync.rs
pkg/kernel/src/proc/vm/: heap.rs  mod.rs  stack.rs
pkg/kernel/src/process/: manager.rs  mod.rs  process.rs
pkg/kernel/src/task/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs
pkg/kernel/src/utils/: func.rs  logger.rs  macros.rs  mod.rs  resource.rs
pkg/lib/: Cargo.toml
pkg/lib/src/: io.rs  lib.rs  macros.rs  sync.rs  syscall.rs
pkg/lib/src/allocator/: brk.rs  mod.rs
pkg/storage/: Cargo.toml
pkg/storage/src/: lib.rs
pkg/storage/src/common/: block.rs  cache.rs  filehandle.rs  io.rs  mount.rs
pkg/storage/src/fs/: random.rs
pkg/storage/src/fs/fat16/: bpb.rs  direntry.rs  file.rs  impls.rs
pkg/storage/src/partition/: mod.rs
pkg/storage/src/partition/mbr/: mod.rs  partition.rs
pkg/syscall/: Cargo.toml
pkg/syscall/src/: lib.rs
