cargo-features = ["profile-rustflags"]

[workspace]
exclude = ["crates/app/.cargo", "crates/app/config"]
members = [
  "crates/app/*",
  "crates/boot",
  "crates/elf",
  "crates/kernel",
  "crates/lib",
  "crates/storage",
  "crates/syscall",
]
resolver = "2"

[workspace.package]
authors      = ["GZTime <Time.GZ@outlook.com>"]
edition      = "2024"
rust-version = "1.91"
version      = "1.0.0"

[profile.release-with-debug]
debug    = true
inherits = "release"

[profile.release-with-debug.package."*"]
debug = false

[workspace.dependencies]
arrayvec              = { version = "0.7", default-features = false }
bit_field             = "0.10"
bitflags              = "2.10"
chrono                = { version = "0.4", default-features = false }
hex-literal           = "1.0"
lazy_static           = { version = "1.4", features = ["spin_no_std"] }
libm                  = "0.2"
linked_list_allocator = "0.10"
log                   = "0.4"
lru                   = "0.16"
micromath             = { version = "2.0", features = ["num-traits"] }
num_enum              = { version = "0.7", default-features = false }
owo-colors            = "4.2"
paste                 = "1.0"
pc-keyboard           = "0.8"
rand                  = { version = "0.9", default-features = false }
rand_hc               = "0.4"
roaring               = { version = "0.11", default-features = false }
spin                  = "0.10"
uefi                  = { version = "0.36", default-features = false }
volatile              = "0.6"
x86                   = "0.52"
x86_64                = "0.15"
xmas-elf              = "0.10"

# Local dependencies

boot        = { path = "crates/boot", default-features = false, package = "ysos_boot" }
elf         = { path = "crates/elf", package = "ysos_elf" }
lib         = { path = "crates/lib", package = "yslib" }
storage     = { path = "crates/storage", package = "ysos_storage" }
syscall_def = { path = "crates/syscall", package = "ysos_syscall" }

[workspace.dependencies.crossbeam-queue]
default-features = false
features = [
  "alloc",
]
version = "0.3"

[workspace.dependencies.futures-util]
default-features = false
features = [
  "alloc",
]
version = "0.3"
