[package]
authors = { workspace = true }
edition = { workspace = true }
name    = "ysos_kernel"
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field             = { workspace = true }
bitflags              = { workspace = true }
boot                  = { workspace = true }
chrono                = { workspace = true }
crossbeam-queue       = { workspace = true }
elf                   = { workspace = true }
futures-util          = { workspace = true }
lazy_static           = { workspace = true }
libm                  = { workspace = true }
linked_list_allocator = { workspace = true }
log                   = { workspace = true }
lru                   = { workspace = true }
micromath             = { workspace = true }
owo-colors            = { workspace = true }
paste                 = { workspace = true }
pc-keyboard           = { workspace = true }
spin                  = { workspace = true }
storage               = { workspace = true }
syscall_def           = { workspace = true }
uefi                  = { workspace = true }
volatile              = { workspace = true }
x86                   = { workspace = true }
x86_64                = { workspace = true }
xmas-elf              = { workspace = true }
