[package]
name = "ysos_boot"
version = "0.0.1"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.32", features = ["global_allocator", "panic_handler", "logger"] }
log = "0.4"
