[package]
name = "ysos_elf"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
x86_64 = { workspace = true }
xmas-elf = { workspace = true }
