[package]
name = "ysos_kernel"
version = "0.4.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { package = "ysos_boot", path = "../boot", default-features = false }
elf = { package = "ysos_elf", path = "../elf" }
syscall_def = { package = "ysos_syscall", path = "../syscall" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
paste = "1.0"
spin = "0.9"
x86 = "0.52"
x86_64 = "0.15"
log = "0.4"
bit_field = "0.10"
micromath = { version = "2.0", features = ["num-traits"] }
bitflags = "2.3"
chrono = { version = "0.4", default-features = false }
libm = "0.2"
linked_list_allocator = "0.10"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
volatile = "0.5"
xmas-elf = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
lru = "0.12"
