[package]
name = "ysos_kernel"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true }
uefi = { workspace = true }
lazy_static = { workspace = true }
paste ={ workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bit_field ={ workspace = true }
micromath = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
libm = { workspace = true }
linked_list_allocator = { workspace = true }
pc-keyboard = { workspace = true }
crossbeam-queue = { workspace = true }
volatile = { workspace = true }
xmas-elf = { workspace = true }
futures-util = { workspace = true }
lru = { workspace = true }
owo-colors = { workspace = true }
