[package]
name = "yslib"
version = "0.5.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }

[features]
default = ["kernel_alloc"]
kernel_alloc = []
