[package]
name = "yslib"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }

[features]
default = ["kernel_alloc"]
kernel_alloc = []
