[package]
authors = { workspace = true }
edition = { workspace = true }
name    = "ysos_sh"
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib        = { workspace = true }
owo-colors = { workspace = true }
